Fix (ProductItem): z-index

--- a/app/components/ProductItem/ProductItem.module.scss
+++ b/app/components/ProductItem/ProductItem.module.scss
@@ -20,7 +20,7 @@
 }
 
 .addToCart {
-  @apply bg-black p-1 z-20 relative flex justify-center items-center gap-5;
+  @apply bg-black p-1 z-0 relative flex justify-center items-center gap-5;
 }
 
 .icon {
